Enable URL patterns for fonts.web.*
See #3636

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -3271,6 +3271,7 @@ fonts.tabs.unselected:
 
 fonts.web.family.standard:
   default: ''
+  supports_pattern: true
   type:
     name: FontFamily
     none_ok: true
@@ -3278,6 +3279,7 @@ fonts.web.family.standard:
 
 fonts.web.family.fixed:
   default: ''
+  supports_pattern: true
   type:
     name: FontFamily
     none_ok: true
@@ -3285,6 +3287,7 @@ fonts.web.family.fixed:
 
 fonts.web.family.serif:
   default: ''
+  supports_pattern: true
   type:
     name: FontFamily
     none_ok: true
@@ -3292,6 +3295,7 @@ fonts.web.family.serif:
 
 fonts.web.family.sans_serif:
   default: ''
+  supports_pattern: true
   type:
     name: FontFamily
     none_ok: true
@@ -3299,6 +3303,7 @@ fonts.web.family.sans_serif:
 
 fonts.web.family.cursive:
   default: ''
+  supports_pattern: true
   type:
     name: FontFamily
     none_ok: true
@@ -3306,6 +3311,7 @@ fonts.web.family.cursive:
 
 fonts.web.family.fantasy:
   default: ''
+  supports_pattern: true
   type:
     name: FontFamily
     none_ok: true
@@ -3318,6 +3324,7 @@ fonts.web.family.fantasy:
 
 fonts.web.size.default:
   default: 16
+  supports_pattern: true
   type:
     name: Int
     minval: 1
@@ -3326,6 +3333,7 @@ fonts.web.size.default:
 
 fonts.web.size.default_fixed:
   default: 13
+  supports_pattern: true
   type:
     name: Int
     minval: 1
@@ -3334,6 +3342,7 @@ fonts.web.size.default_fixed:
 
 fonts.web.size.minimum:
   default: 0
+  supports_pattern: true
   type:
     name: Int
     minval: 0
@@ -3344,6 +3353,7 @@ fonts.web.size.minimum_logical:
   # This is 0 as default on QtWebKit, and 6 on QtWebEngine - so let's
   # just go for 6 here.
   default: 6
+  supports_pattern: true
   type:
     name: Int
     minval: 0
