--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1630,6 +1630,11 @@ hints.selectors:
       - '[role="link"]'
       - '[role="option"]'
       - '[role="button"]'
+      - '[role="tab"]'
+      - '[role="checkbox"]'
+      - '[role="menuitem"]'
+      - '[role="menuitemcheckbox"]'
+      - '[role="menuitemradio"]'
       - '[ng-click]'
       - '[ngClick]'
       - '[data-ng-click]'
